# cxxm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
includes/: class_manager.hpp  cmakelists_manager.hpp  cmd.hpp  commands.hpp  cxxclass.hpp  defaults.hpp  project.hpp  tools.hpp
includes/tools/: cmake_tools.hpp  default_file_contents.hpp  file_tools.hpp  parsing_tools.hpp
sources/: cmd.cpp  cxxclass.cpp  defaults.cpp  main.cpp  project.cpp
sources/tools/: cmake_tools.cpp  file_tools.cpp  parsing_tools.cpp
tests/: CMakeLists.txt
tests/sources/: file_tests.cpp  main.cpp  parsing_tests.cpp
